<resources>
    <string name="app_name">BakingApp</string>
    <string name="baking_app">Baking App</string>
    <string name="progress_dialog_loading">Loading&#8230;</string>

    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_steps">Steps</string>

    <string name="step_progress">%1$d / %2$d</string>
    <string name="no_video_for_step">There is no video in this step.</string>

    <string name="no_recipes_to_display">There are no recipes to display. Please, check your internet connection.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="last_recipe_visited_key">last_recipe</string>

    <string name="empty_widget">Open a recipe in Baking App to load its ingredients here</string>

    <string name="step_progress_test_string">2 / 7</string>

    <string name="servings">Servings:</string>
</resources>
